--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src-elem 'self' https://*.jsdelivr.net; style-src-elem 'self' cdn.jsdelivr.net; img-src 'self' data: *.w3.org">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src-elem 'self' https://*.jsdelivr.net; style-src-elem 'self' https://*.jsdelivr.net; img-src 'self' data: *.w3.org">
     <title>AD Inventory</title>
   </head>
   <body>
@@ -19,51 +19,66 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form>
+            <form class="needs-validation" id="addDeviceForm" novalidate>
               <div class="mb-3">
                 <label for="deviceName" class="col-form-label">Previous User</label>
-                <input type="text" class="form-control" id="previousUser" placeholder="Previous User" autocomplete="off" required>
+                <input type="text" class="form-control" id="previousUser" placeholder="Previous User" autocomplete="off">
               </div>
               <div class="mb-3">
                 <label for="currentUser" class="col-form-label">Current User</label>
-                <input type="text" class="form-control" id="currentUser" placeholder="Current User" autocomplete="off" required>
+                <input type="text" class="form-control" id="currentUser" placeholder="Current User" autocomplete="off">
               </div>
               <div class="mb-3">
                 <label for="computerName" class="col-form-label">Computer Name</label>
-                <input type="text" class="form-control" id="computerName" placeholder="Computer Name" autocomplete="off" required>
+                <input type="text" class="form-control" id="computerName" placeholder="Computer Name" autocomplete="off" aria-describedby="validationServerComputerNameFeedback" required>
+                <div id="validationServerComputerNameFeedback" class="invalid-feedback">
+                  Please provide a computer name.
+                </div>
               </div>
               <div class="mb-3">
                   <label for="modelName" class="col-form-label">Model</label>
                   <input type="text" class="form-control" id="modelName" placeholder="Model" autocomplete="off"" required>
+                  <div class="invalid-feedback">
+                    Please provide a computer model.
+                  </div>
               </div>
               <div class="mb-3">
                 <label for="cpuModel" class="col-form-label">CPU</label>
                 <input type="text" class="form-control" id="cpuModel" placeholder="CPU" autocomplete="off"" required>
+                <div class="invalid-feedback">
+                  Please provide a CPU model.
+                </div>
               </div>
               <div class="mb-3">
-               <label for="ramSize" class="col-form-label">RAM</label>
+                <label for="ramSize" class="col-form-label">RAM</label>
                 <input type="text" class="form-control" id="modelName" placeholder="RAM" autocomplete="off"" required>
+                <div class="invalid-feedback">
+                  Please provide a RAM size.
+                </div>
               </div>
               <div class="mb-3">
-               <label for="storage" class="col-form-label">Storage Size</label>
-               <input type="text" class="form-control" id="storage" placeholder="Storage" autocomplete="off"" required>
+                <label for="storage" class="col-form-label">Storage Size</label>
+                <input type="text" class="form-control" id="storage" placeholder="Storage" autocomplete="off"" required>
+                <div class="invalid-feedback">
+                  Please provide a storage size.
+               </div>
               </div>
               <div class="mb-3">
                 <label for="storageType" class="col-form-label">Disk Type</label>
-                <div class="form-check">
-                  <input type="radio" class="form-check-input" name="storageTypeRadio" id="ssdRadio">
-                  <label class="form-check-label" for="ssdRadio">SSD</label>
-                </div>
-                <div class="form-check">
-                  <input type="radio" class="form-check-input" name="storageTypeRadio" id="hddRadio" checked>
-                  <label class="form-check-label" for="hddRadio">HDD</label>
-                </div>
+                <select class="form-select" id="storageType" required>
+                  <option selected disabled value="">Choose...</option>
+                  <option>HDD</option>
+                  <option>SSD</option>
+                  <div class="invalid-feedback">
+                    Please select a disk type.
+                  </div>
+                </select>
               </div>
             </form>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save</button>
+            <button type="submit" form="addDeviceForm" class="btn btn-primary">Save</button>
           </div>
         </div>
       </div>
