--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <h1>Active Directory Inventory</h1>
-    <button type="button" class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addRecord">Add device</button>
+    <button type="button" class="btn btn-primary float-end me-3" data-bs-toggle="modal" data-bs-target="#addRecord">Add device</button>
 
-    <table class="table">
+    <table class="table table-sm table-bordered text-center">
       <thead>
         <tr id="table-header-row">
           <th scope="col">Previous User</th>
