Add delete button functionality

--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
       <tbody id="table-body"></tbody>
     </table>
 
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteButtonModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteButtonModalLabel">Are you sure?</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete this item?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" id="deleteItemModalSubmit" class="btn btn-primary">Yes, delete item</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="modal fade" id="addRecord" tabindex="-1" aria-labelledby="newDeviceModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -113,6 +131,7 @@
         </div>
       </div>
     </div>
+    
     <script type="module" src="./renderer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
