--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
       </div>
     </div>
 
+    <div class="modal fade" id="overwriteModal" tabindex="-1" aria-labelledby="overwriteModalLabel">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="overwriteModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>Are you sure you would like to overwrite this entry?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" id="overwriteItemSubmit" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="modal fade" id="addRecord" tabindex="-1" aria-labelledby="newDeviceModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
